--- a/js_20230710/ex06.html
+++ b/js_20230710/ex06.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        .font32{
-            font-size:32px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    .font32{
+      font-size : 32px;
+    }
+    .red{
+      color : red;
+    }
+  </style>
 </head>
 <body>
-    <a href="http://www.naver.com">네이버</a><br>
-    <a id = "font32" class = "font32" href="http://www.naver.com">네이버</a>
-    <script>
-        const element1 = document.querySelector("a");
-        console.log(element1.getAttribute("href"));
-        element1.setAttribute("href", "http://www.google.com");
-        console.log(element1.getAttribute("href"));
-        // 링크 페이지를 새창(새탭)에서 띄우기
-        element1.setAttribute("target", "_blank");
-        // 링크 없애기
-        element1.removeAttribute("href");
+  <a href="https://www.naver.com">네이버</a><br>
+  <a id = "font32" class = "font32" href="https://www.nate.com">네이트</a>
+  <script>
+    const element1 = document.querySelector("a");
+    console.log(element1.getAttribute("href"));
+    element1.setAttribute("href", "https://www.google.com");
+    console.log(element1.getAttribute("href"));
+    // 링크 페이지를 새창(새탭)에서 띄우기
+    element1.setAttribute("target", "_blank");
+    // 링크 없애기
+    element1.removeAttribute("href");
 
-        const element2 = document.getClementById("font32");
+    const element2 = document.getElementById("font32");
 
-        // 클래스 변경하기 : font32 --> red
-        element2.setAttribute("class", "red");
+    // 클래스 변경하기 : font32 --> red
+    element2.setAttribute("class", "red");
 
-    </script>
+
+  </script>
 </body>
 </html>
