--- a/js_20230710/ex08.html
+++ b/js_20230710/ex08.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-    <form name="f1">
-        <input type="text">
-    </form>
-    <form name="f2">
-        <input type="text">
-    </form>
-    <form name="f3">
-        <input type="text">
-    </form>
-    <form name="f4">
-        <input type="text">
-    </form>
+  <form name="f1">
+    <input type="text">
+  </form>
+  <form name="f2">
+    <input type="text">
+  </form>
+  <form name="f3">
+    <input type="text">
+  </form>
+  <form name="f4">
+    <input type="text">
+  </form>  
 
-    <script>
-        const forms = document.querySelectorAll("form");
-        console.log(forms);
-        console.log(forms[1]);
+  <script>
+    const forms = document.querySelectorAll("form");
+    console.log(forms);
+    console.log(forms[1]);
 
-        const f3 = document.f3;
-        console.log(f3);
-    </script>
+    const f3 = document.f3;
+    console.log(f3);
+  </script>
 </body>
 </html>
