--- a/js_20230710/ex11.html
+++ b/js_20230710/ex11.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+  </head>
 <body>
-    <form>
-        <select>
-            <option value="strawberry">딸기</option>
-            <option value="orange">오렌지</option>
-            <option value="mango" selected>망고</option>
-            <option value="peach">복숭아</option>
-        </select>
-    </form>
+  <form>
+    <select>
+      <option value="strawberry">딸기</option>
+      <option value="orange">오렌지</option>
+      <option value="mango" selected>망고</option>
+      <option value="peach">복숭아</option>
+    </select>
+  </form>
 
-    <script>
-        const options = document.forms[0].elements[0].children;
-        console.log(options);
-    </script>
+  <script>
+    // const options = document.forms[0].elements[0].children;
+    const options = document.querySelectorAll("option");
+    console.log(options);
+    options.forEach(element => {
+      console.log(element);
+    });
+    options.forEach(element => {
+      if (element.value == 'peach'){
+        element.selected = true;
+      }      
+    });
+    
+  </script>
 </body>
 </html>
