--- a/js_20230710/ex12.html
+++ b/js_20230710/ex12.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-    <form name="f1">
-        <input type="file" name="uploaded">
-        <input type="submit" value="보내기">
-    </form>
-    <script>
-        const files = document.f1.upload
-    </script>
+  <form name="f1">
+    <input type="file" name="uploaded">
+    <input type="submit" value="보내기">
+  </form>
+  <script>
+    // 자동 submit : submit 버튼을 자동으로 계속 클릭하는 효과
+    document.forms[0].submit();
+
+
+    /*
+    // 아래 부분은 chrome console 창에서 확인할 것
+    document.f1.uploaded.files;
+    document.f1.uploaded.files[0].name;
+    document.f1.uploaded.files[0].size;
+    document.f1.uploaded.files[0].type;    
+    */
+
+    
+
+  </script>
 </body>
 </html>
