--- a/js_20230710/ex13.html
+++ b/js_20230710/ex13.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
+  <button onclick="clicked();">여기를 클릭 !!!</button><br>
+  <button ondblclick="dblClicked();">여기를 더블클릭 !!!</button><br>
+  <button onmouseover="mouseOver();">여기에 마우스 오버 !!!</button><br>
+  
+  <input type="text" onkeydown="keyDown();" /><br>
+  <input type="text" onfocus="onFocus();" /><br>
+
+  <button id="btn1" >btn1 버튼 클릭</button><br>
+  <input type="text" id="focus1" /><br>
+
+  <script>
+    function clicked(){
+      alert('클릭 되었음 !!!');
+    }
+    function dblClicked(){
+      alert('더블 클릭 되었음 !!!');
+    }
+    function mouseOver(){
+      alert('마우스 오버 되었음 !!!');
+    }
+    function keyDown(){
+      alert('키보드 누름 !!!');
+    }
+    /*
+    function onFocus(){
+      alert('마우스 포커싱 !!!');
+    }
+    */
+    const btn1 = document.querySelector("#btn1");
+    btn1.onclick = function mouseOverBtn1(){
+      alert('btn1 버튼 클릭 되었음 !!!');
+    }
+    /*
+    const focus1 = document.querySelector("#focus1");
+    focus1.onfocus = onFocusEvent;    
+    function onFocusEvent(){
+      alert('포커스 이벤트 발생함 !!!');
+    }
+    */
     
+    /*
+    const focus1 = document.querySelector("#focus1");
+    focus1.onfocus = function(){
+      alert('포커스 이벤트 발생함 !!!');
+    }
+    */
+  </script>
 </body>
 </html>
