--- a/js_20230710/ex02.html
+++ b/js_20230710/ex02.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DOM</title>
 </head>
 <body>
-    <h1 id="h1" class="test">H1</h1>
-    <a id="a" class="test" href="#"> A </a>
+  <h1 id="h1" class="test">H1</h1>
+  <a id="a" class="test" href="#"> A </a>
 
-    <div class="b1">
-        <p class="t">t1</p>
-        <p class="t">t2</p>
-    </div>
-    <div class="b2">
-        <p class="t">t3</p>
-        <p class="t">t4</p>
-    </div>
+  <div class="b1">
+    <p class="t">t1</p>
+    <p class="t">t2</p>
+  </div>
+  <div class="b2">
+    <p class="t">t3</p>
+    <p class="t">t4</p>
+  </div>
 
-    <p id="title">"더조은" <span style="color:red;">Javascript Class</span></p>
+  <p id="title">"더조은" <span style="display: none;">Javascritp Class</span></p>
 
-    <div id="textContent">a</div>
-    <div id="innerText">b</div>
-    <div id="innerHTML">c</div>
+  <div id="textContent"></div>
+  <div id="innerText"></div>
+  <div id="innerHTML"></div>
+
+  
+
+
+
 </body>
 </html>
